--- a/player.html
+++ b/player.html
@@ -30,7 +30,7 @@
                 <div class="recorder">
                     <img src="recordplayer.png" alt="Grający obrazek" class="recorder-image">
                     <div class="cd-container">
-                        <img src="cd1.png" hidden alt="Spinning CD" id="cd-image" class="cd-image">
+                        <img src="https://n4tex.github.io/hobby/cd1.png" alt="Spinning CD" id="cd-image" class="cd-image">
                     </div>
                 </div>
                 <audio id="audio"></audio>
